# kero

./: .luarc.json  Cargo.toml  LICENSE  README.md
crates/fey_ase/: Cargo.toml
crates/fey_ase/src/: ase.rs  blend_mode.rs  cel.rs  error.rs  format.rs  frame.rs  layer.rs  lib.rs  loop_dir.rs  slice.rs  tag.rs  user_data.rs
crates/fey_color/: Cargo.toml
crates/fey_font/: Cargo.toml
crates/fey_font/src/: lib.rs
crates/fey_grid/: Cargo.toml
crates/fey_guid/: Cargo.toml
crates/fey_img/: Cargo.toml
crates/fey_img/lua/: Image.lua
crates/fey_lua/: Cargo.toml
crates/fey_lua/src/: lib.rs
crates/fey_math/: Cargo.toml
crates/fey_math/src/lua/: rect_lua.rs  vec2_lua.rs  vec3_lua.rs  vec4_lua.rs
crates/fey_packer/: Cargo.toml
crates/fey_rand/: Cargo.toml
crates/fey_rand/src/: lib.rs  rand.rs  rand_lua.rs
crates/kero/: Cargo.toml  README.md
crates/kero/examples/platformer/src/: main.rs
crates/kero/lua/: Font.lua  Gamepad.lua  IndexBuffer.lua  Monitor.lua  Sampler.lua  Screen.lua  Shader.lua  SubTexture.lua  Surface.lua  Texture.lua  Time.lua  Vertex.lua  VertexBuffer.lua  VideoMode.lua
crates/kero/src/: lib.rs
crates/kero/src/core/: game_builder.rs
crates/kero/src/gfx/: draw.rs  graphics.rs  surface.rs
crates/kero/src/lua_modules/: screen_lua.rs  time_lua.rs
crates/kero_color/: Cargo.toml
crates/kero_color/lua/: Color.lua
crates/kero_color/src/: channel.rs  color_lua.rs  grey.rs  grey_alpha.rs  hsl.rs  hsv.rs  lib.rs  rgb.rs  rgba.rs
crates/kero_ent/: Cargo.toml
crates/kero_ent/examples/ent_basics/: Cargo.toml
crates/kero_ent/examples/ent_basics/lib/: Counter.lua
crates/kero_ent/examples/ent_basics/lua/: Main.lua  Mover.lua
crates/kero_ent/examples/ent_basics/src/: counter.rs  main.rs
crates/kero_ent/lua/: Component.lua  Entity.lua  World.lua
crates/kero_ent/src/: component.rs  component_lua.rs  component_of.rs  component_type.rs  component_types.rs  entity.rs  entity_lua.rs  game_builder_ext.rs  into_component.rs  lib.rs  registry.rs  world.rs  world_lua.rs
crates/kero_font/: Cargo.toml
crates/kero_font/src/: lib.rs
crates/kero_grid/: Cargo.toml
crates/kero_grid/src/: coord.rs  grid.rs  grid_buf.rs  grid_iter.rs  grid_mut.rs
crates/kero_guid/: Cargo.toml
crates/kero_guid/lua/: Guid.lua
crates/kero_guid/src/: guid.rs  guid_lua.rs  lib.rs
crates/kero_img/: Cargo.toml
crates/kero_img/src/: dyn_image.rs  image.rs  image_lua.rs  lib.rs  pixel.rs  png.rs  qoi_impl.rs
crates/kero_lua/: Cargo.toml
crates/kero_lua/lua/: Instant.lua
crates/kero_lua/src/: instant_lua.rs
crates/kero_math/: Cargo.toml
crates/kero_math/src/lua/: affine2_lua.rs  affine3_lua.rs  cardinal_lua.rs  circle_lua.rs  line_lua.rs  mat2_lua.rs  mat3_lua.rs  mat4_lua.rs  mod.rs  num_lua.rs  octal_lua.rs  polygon_lua.rs  projection_lua.rs  quad_lua.rs  ray_hit_lua.rs  ray_lua.rs  rect_lua.rs  shape_lua.rs  triangle_lua.rs  vec2_lua.rs  vec3_lua.rs  vec4_lua.rs
crates/kero_packer/: Cargo.toml
crates/kero_packer/src/: item.rs  packed.rs  rect_packer.rs
crates/kero_rand/: Cargo.toml
crates/kero_rand/src/: rand.rs  rand_lua.rs
crates/kero_spr/examples/basics/: Cargo.toml
crates/kero_spr/examples/basics/assets/: mockup.aseprite  player.aseprite
crates/kero_spr/examples/basics/src/: main.rs
crates/kero_spr/examples/basics_lua/lua/: Main.lua
crates/kero_spr/lua/: SpriteAnim.lua  SpriteFont.lua
crates/kero_spr/src/: draw_spr.rs  lib.rs  sprite_anim.rs  sprite_font.rs  sprite_packer.rs  sprite_patch.rs  sprite_sheet.rs
crates/kero_spr/src/lua/: sprite_anim_lua.rs  sprite_font_lua.rs
examples/controller/: Cargo.toml
examples/minimal/: Cargo.toml
examples/minimal_lua/: Cargo.toml
examples/minimal_lua/lua/: Main.lua
examples/platformer/: Cargo.toml
examples/screen/: Cargo.toml
examples/shaders/: Cargo.toml
examples/smooth_moves/: Cargo.toml
examples/surfaces/: Cargo.toml
examples/text/: Cargo.toml
examples/text/src/: main.rs
examples/texture_packer/: Cargo.toml
examples/texture_packer/src/: main.rs
examples/tiles/: Cargo.toml
kero/: Cargo.toml
kero-cli/: Cargo.toml
kero-cli/src/: main.rs
kero/lua/: ColorMode.lua  Font.lua  GamepadButton.lua  Key.lua  Keyboard.lua  Monitor.lua  Mouse.lua  Sampler.lua  SubTexture.lua  Surface.lua  Time.lua  VideoMode.lua
kero/src/: lib.rs  new_game.rs
kero/src/core/: app_handler.rs  game_builder.rs  game_error.rs  lua_app.rs  mod.rs  monitor.rs
kero/src/gfx/: color_mode.rs  font.rs  graphics.rs  index_buffer.rs  mod.rs  screen.rs  shader.rs  sub_texture.rs  surface.rs  texture.rs  texture_packer.rs  texture_pixel.rs  vertex_buffer.rs
kero/src/lua_modules/: app_lua.rs  blend_mode_lua.rs  draw_lua.rs  gamepad_lua.rs  index_buffer_lua.rs  key_lua.rs  monitor_lua.rs  sampler_lua.rs  shader_lua.rs  sub_texture_lua.rs  time_lua.rs  topology_lua.rs  vertex_lua.rs  window_lua.rs
polywog/: Cargo.toml
polywog/lua/: App.lua  Draw.lua  Gamepad.lua  GamepadAxis.lua  IndexBuffer.lua  Keyboard.lua  MouseButton.lua  Screen.lua  Shader.lua  Surface.lua  Texture.lua  Vertex.lua  VertexBuffer.lua  Window.lua
polywog/src/: lib.rs
polywog/src/core/: app_handler.rs  context.rs  cursor_icon.rs  game_builder.rs  game_error.rs  lua_app.rs  mod.rs  monitor.rs  time.rs  window.rs
polywog/src/gfx/: color_mode.rs  draw.rs  font.rs  graphics.rs  index_buffer.rs  render_data.rs  sampler.rs  screen.rs  shader.rs  sub_texture.rs  surface.rs  texture.rs  texture_packer.rs  texture_pixel.rs  vertex_buffer.rs
polywog/src/lua_modules/: app_lua.rs  color_mode_lua.rs  draw_lua.rs  font_lua.rs  index_buffer_lua.rs  mod.rs  monitor_lua.rs  screen_lua.rs  shader_lua.rs  sub_texture_lua.rs  surface_lua.rs  texture_format_lua.rs  texture_lua.rs  vertex_buffer_lua.rs  video_mode_lua.rs  window_lua.rs
polywog/src/misc/: unicode.rs
