[package]
name = "fey_ase"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
byteorder = "1.5.0"
fey_color = { version = "0.1.1", path = "../fey_color" }
fey_math = { version = "0.1.0", path = "../fey_math" }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
zune-inflate = "0.2.54"
