[package]
name = "kero_color"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Types for working with colors."

[features]
lua = ["dep:mlua", "dep:kero_lua"]

[dependencies]
approx = "0.5.1"
bytemuck = "1.24.0"
kero_lua = { version = "0.1.0", path = "../kero_lua", optional = true }
kero_math = { version = "0.1.0", path = "../kero_math" }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
