[package]
name = "kero_guid"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "A 128-bit globally unique identifier."

[features]
lua = ["dep:mlua", "dep:kero_lua"]

[dependencies]
kero_lua = { version = "0.1.0", path = "../kero_lua", optional = true }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
